# penn_ecog

./: .dropbox  .gitignore  ComputerEEGFilterCursorOnly.h  ComputerEEGFilterRSE.cpp  Doxyfile  Model_bern.txt  README.md  README.rst  batched_analysis.m  blkdiag.h  compile_zmq.sh  computerPointProcessFilterGrandState.m~  config_files  constructRSEMatrices.cpp  get_variables.m  kill_all.sh  mainpage.dox  randomStartLocation.h  repslices.h  run_all.sh  run_cde.sh  run_filter.sh  run_graphics.sh  run_signal_acquisition.sh  run_supervisor.sh  runexample.m
eeg_experiments/: CMakeLists.txt  README.md  eeg_receiver.cpp  eeg_receiver.h  fft.h  gnuplot.cpp  gnuplot.h  main.cpp  pickle_class_8_12_large_lapl.p  python_decoder.py  statemachine.cpp  statemachine.h  utils.cpp  utils.h
helios/: .main.cpp.swp  CMakeLists.txt  ComputerEEGFilterCursorOnly.h  ComputerEEGFilterCursorOnlyHistory.cpp  ComputerEEGFilterCursorOnlyHistory.h  ComputerEEGFilterRSE.cpp  ComputerEEGFilterRSE.h  ComputerEEGFilterRSEHistory.h  blkdiag.cpp  blkdiag.h  constructRSEMatrices.cpp~  generateChannelParameters.cpp  generateChannelParameters.cpp~  generateChannelParameters.h  main.cpp  nextTimeStep.cpp  parameters.cpp  parameters.h  pelops.cpp  pelops.h  randomStartLocation.cpp  randomStartLocation.h  repslices.cpp  repslices.h  seqs.h  summer2012.desktop
penn2/: .gitignore  filter.tex  launcher.py  readme  readme.md  readme.rst
penn2/analysis/: .predictor.swp  channel_select.py  correlation.m  eeg_craniectomy  eeg_skull  eeg_synthesized  emg_craniectomy  emg_skull  emg_synthesized  fft.py  readme.md  spectrogram.m  synthesize.py
penn2/config/: feature_extract_config.cfg  feature_extract_signal.cfg  filter.cfg  penn.cfg  readme.md  supervisor_config.cfg
penn2/data/: log.txt  readme.md
penn2/docs/: filter_featureextractor.dia  filter_supervisor.dia  modules.dia  (+1 more)
penn2/feature_extraction/feature_extract_cpp/: CMakeLists.txt  config.cfg  fft.h  kinect_matrix.csv  kinect_signal.cfg  main.cpp  matrix.csv  readme.md  signal.cfg
penn2/feature_extraction/feature_extract_cpp/spatial_matrix/: CMakeLists.txt  main.cpp
penn2/filter/cpp/: CMakeLists.txt  Makefile  filter.cfg  filter_class.cpp  filter_class.h  jointrse_filter.cpp  jointrse_filter.h  main.cpp  matrix.h  moving_average_filter.cpp  moving_average_filter.h  naive_filter.cpp  naive_filter.h  plot_innovation.m  reachstateequation.cpp  reachstateequation.h  readme.md  tests.cpp  tests.h
penn2/graphics/elam2/: CMakeLists.txt  EyetrackerBrowser.py  README.md  arrangewindows.sh  copydata.sh  elam2.cfg  hud_Element.cpp  hud_Element.h  hud_Element_circle.cpp  hud_Element_circle.h  main.cpp  textBox.cpp  textBox.h  utils.cpp  utils.h
ver1_kevins_code_eeg/: ComputerEEGFilterCursorOnly.cpp  ComputerEEGFilterRSE.h  blkdiag.cpp  constructRSEMatrices.h  generateChannelParameters.cpp  parameters.h  parameters.m  plotresults.m  randomStartLocation.cpp  repslices.cpp  runanalysis.m  trainingRun.cpp  trainingRunOld.cpp
(+282 files in other folders)
