project(feature_extract_cpp)
INCLUDE_DIRECTORIES(/usr/local/include)
LINK_DIRECTORIES(/usr/local/lib)
set(CMAKE_CXX_FLAGS "-Wall -O3 -g -std=gnu++11 -fopenmp -mavx")
cmake_minimum_required(VERSION 2.8)
SET(SRC_LIST main.cpp ../../libs/decimate/decimate.cpp ../../../libs/inih/cpp/INIReader.cpp ../../../libs/inih/ini.c)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} zmq fftw3f fftw3f_threads pthread)
